Global spacing enhancements, fixes and clarifications. Add more paddings etc.

--- a/features/Project/SubInfo/_SubInfo.scss
+++ b/features/Project/SubInfo/_SubInfo.scss
@@ -9,7 +9,7 @@
 }
 
 .SubInfo-ruler {
-  margin-bottom: rem($space-l);
+  margin-bottom: rem($space-ml);
   transform-origin: top left;
 
   @include mq(s) {
