--- a/stylesheets/helpers/_padding.scss
+++ b/stylesheets/helpers/_padding.scss
@@ -1,5 +1,6 @@
 .p\:0 { padding: 0 !important; }
 
+.pt\:20vw { padding-top: 20vw; }
 .pt\:15vw { padding-top: 15vw; }
 .pt\:10vw { padding-top: 10vw; }
 .pt\:5vw { padding-top: 5vw; }
